--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>recepten | brocoli quiche</title>
+	</head>
+	<body>
+		<h1>brocoli quiche</h1>
+
+		<ul>
+			<li><a href="index.html">brocoli quiche</a></li>
+			<li><a href="enchilladas-met-kip.html">enchilladas-met-kip</a></li>
+			<li><a href="gnocchi-feta-oven.html">gnocchi-feta-oven</a></li>
+		</ul>
+
+		<img src="image/broccoli-quiche.jpg" />
+
+		<h2>Ingredienten</h2>
+
+		<ul>
+			<li>5 plakjes hartig deeg</li>
+			<li>400 gr broccoli</li>
+			<li>250 ml room</li>
+			<li>5 eieren</li>
+			<li>1 handje geraspte kaas</li>
+			<li>250 gr champignons</li>
+			<li>160 gr spekjes ( vega ) (Garden Gourmet)</li>
+			<li>1 eetlepel paneermeel</li>
+			<li>1 theelepel gedroogde peterselie</li>
+			<li>Peper en zout naar smaak</li>
+		</ul>
+
+		<h2>Bereiding</h2>
+		<ol>
+			<li>
+				Verwarm de oven voor op 180 graden en bekleed een ingevette of bekleedde
+				quichevorm met de velletjes hartig deeg. Druk alle naden goed aan
+				elkaar. Prik met een vork gaatjes in de bodem en bestrooi met een beetje
+				paneermeel om te voorkomen dat de bodem te nat wordt.
+			</li>
+			<li>
+				Snijd de champignons in plakjes en bak ze samen met het spek (vega) in
+				een pan tot ze goudbruin zijn. Haal ze van het vuur en laat even
+				afkoelen.
+			</li>
+			<li>
+				Snijd de broccoli in kleine roosjes en blancheer ze kort in kokend
+				water. Giet af en laat goed uitlekken.
+			</li>
+			<li>
+				Snijd de broccoli in kleine roosjes en blancheer ze kort in kokend
+				water. Giet af en laat goed uitlekken.
+			</li>
+			<li>
+				Snijd de broccoli in kleine roosjes en blancheer ze kort in kokend
+				water. Giet af en laat goed uitlekken.
+			</li>
+			<li>
+				Snijd de broccoli in kleine roosjes en blancheer ze kort in kokend
+				water. Giet af en laat goed uitlekken.
+			</li>
+			<li>
+				Laat de quiche een paar minuten afkoelen voordat je hem aansnijdt. Dit
+				zorgt ervoor dat hij beter in stukken te verdelen is.
+			</li>
+			<li>
+				Bewaar de quiche in de koelkast en consumeer binnen 2 dagen. Je kunt de
+				quiche koud eten of even opwarmen in de oven of magnetron.
+			</li>
+		</ol>
+	</body>
+</html>
